# voitto

./: .gitignore  app.py  databricks.yml  explore_db.ipynb  leaderboard.csv  main.py  pyproject.toml  voitto.py
dashboard/: home.py
dashboard/pages/: backtest_lab.py  live_betting.py  model_forge.py
notebooks/bronze/: ingest_odds.ipynb  init_schemas.ipynb
scripts/: backfill_dates.py  backfill_odds.py  backfill_stats.py  backfill_team_stats.py  backfill_teams.py  backtest.py  fetch_stats.py  fetch_team_stats.py  get_nba_markets.py  ingest_odds.py  init_table.py  write_unified.py
src/voitto/: backtest_engine.py  database.py  fetch_stats.py  ingest.py  models.py  run_pipeline.py  stats_utils.py
src/voitto/dashboard/: backtest_lab.py  data_explorer.py  home.py  live_betting.py  model_forge.py  training.py
src/voitto/dashboard/components/: bayes_tab.py  xgb_tab.py
src/voitto/database/: database.py  models.py  stats_utils.py  teams.py
src/voitto/engine/: backtest.py  bet.py  predict.py  predictor.py  train_bayes.py  train_xgb.py  utils.py
src/voitto/features/: registry.py  utils.py
training/: analyze_minutes.py  minutes.py
