[project]
name = "voitto"
version = "0.1.0"
description = "Python app for development of sports prediction models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "nba-api>=1.11.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
]


[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = [
	"A",    # builtins
	"ANN",  # type annotations
	"B",    # bugbear
	"BLE",  # blind exception
	"C4",   # comprehensions
	"COM",  # commas
	"E",    # pycodestyle
	"EM",   # errormessage
	"EXE",  # executable
	"F",    # pyflakes
	"FURB", # refurb
	"I",    # isort
	"ICN",  # import-conventions
	"INP",  # implicit-namespace-package
	"NPY",  # numpy
	"PERF", # perflint
	"PIE",  # misc dict stuff
	"PTH",  # pathlib
	"RET",  # return
	"RUF",  # ruff
	"SIM",  # simplify
	"T10",  # debugger
	"TRY",  # tryceratops
	"UP",   # pyupgrade
]
ignore = [
	"COM812",
	"INP001",
	"UP017",
]
